# mango_risk_check

./: README.md  copy_idl.sh
js/: .npmignore  README.md  generateTables.py  idl.json  package.json
js/examples/: example.ts
js/lib/: index.ts
js/test/: workflow.test.ts
program/: Anchor.toml  deploy_dev.sh
program/programs/mango_risk_check/: Cargo.toml
program/programs/mango_risk_check/src/: errors.rs  lib.rs
program/tests/: mango_risk_check.ts
